fix bug text out of screen

--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,6 @@
+
+
+
 .hide_words {
     display: none;
 }
@@ -73,61 +76,14 @@ h1 {
     padding-bottom: 20pt;
 }
 
-label input[type="radio"] ~ i.fa.fa-circle-o {
+.radioo {
     color: #c8c8c8;
-    display: inline;
-
-}
-
-label input[type="radio"] ~ i.fa.fa-dot-circle-o {
-    display: none;
-}
-
-label input[type="radio"]:checked ~ i.fa.fa-circle-o {
-    display: none;
-}
-
-label input[type="radio"]:checked ~ i.fa.fa-dot-circle-o {
-    color: #7AA3CC;
-    display: inline;
-
-}
-
-label:hover input[type="radio"] ~ i.fa {
-    color: #7AA3CC;
-}
-
-div[data-toggle="buttons"] label.active {
-    color: #7AA3CC;
-}
-
-div[data-toggle="buttons"] label {
-    display: inline-block;
-    padding: 6px 12px;
-    margin-bottom: 0;
     font-size: 16pt;
-    font-weight: normal;
     line-height: 2em;
-    text-align: left;
-    white-space: nowrap;
     vertical-align: top;
-    cursor: pointer;
-    background-color: none;
-    border: 0px solid #c8c8c8;
-    border-radius: 3px;
-    color: #c8c8c8;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
 }
 
-div[data-toggle="buttons"] label:hover {
+.radioo:hover {
     color: #7AA3CC;
-}
-
-div[data-toggle="buttons"] label:active, div[data-toggle="buttons"] label.active {
-    -webkit-box-shadow: none;
-    box-shadow: none;
+    cursor:pointer;
 }
